<resources>
    <string name="app_name">Medis-Ku</string>
    <string name="hai">Hai,</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="melanjutkan">Silahkan login untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda">Masukkan email anda</string>
    <string name="password">Password</string>
    <string name="lupa_password_anda">Lupa Password anda ?</string>
    <string name="masukkan_password_anda">Masukkan password anda</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="copyright">© SILK. all right reserved.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>